# kiro-chat

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/qac-commits/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.githooks/: commit-msg
.github/workflows/: ci.yml  forge-pipeline.yml  forge-review.yml  promote-to-main.yml  promote.yml  release.yml
docs/: architecture.md  backend.md  build-and-release.md  frontend.md  ipc-contract.md  pipeline.md
scripts/: gen-icons.mjs  set-version.mjs  setup-pipeline.sh
src/: composition.ts  i18n.ts  ipc.ts  main.ts  styles.css  terminal.ts  theme.ts  ui.ts  wizard.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  deps.rs  kiro.rs  main.rs  path_env.rs  proc.rs  pty.rs
