[package]
name = "kiro-chat"
version = "0.1.0"
description = "Kiro Chat — a friendly desktop terminal for the Kiro CLI"
edition = "2021"
license = "MIT"
repository = "https://github.com/hubtheocoelho/kiro-cli-installer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
parking_lot = "0.12"
base64 = "0.22"
dirs = "6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
